--- a/app/templates/feedbacks.html
+++ b/app/templates/feedbacks.html
@@ -40,7 +40,7 @@
             <textarea class="form-control" id="mensagem" name="mensagem" rows="5" required>{{ request.form.mensagem or '' }}</textarea>
         </div>
 
-        <button type="submit" class="btn btn-primary">Enviar Feedback</button>
+        <button type="submit" class="btn btn-primary mb-4">Enviar Feedback</button>
     </form>
 </div>
 {% endblock %}
