--- a/app/templates/users/list.html
+++ b/app/templates/users/list.html
@@ -3,7 +3,7 @@
 {% block title %}Usuários - SeriDigital{% endblock %}
 
 {% block content %}
-<div class="container mt-4">
+<div class="container mt-4 mb-4">
     <div class="row">
         <div class="col-md-12">
             <h2>Usuários Cadastrados</h2>
