--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -5,12 +5,12 @@
 {% block extra_css %}{% endblock %}
 
 {% block content %}
-<div class="container mt-5">
+<div class="container mt-5 mb-4">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <h3 class="text-center">Login</h3>
+                    <h3 class="text-center" style="color: white;">Login</h3>
                 </div>
                 <div class="card-body">
                     <form method="post">
