--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}SeriDigital{% endblock %}</title>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/cacto.png') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
@@ -24,7 +25,7 @@
                         <a class="nav-link" href="{{ url_for('main.index') }}">Início</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('content.list_content') }}">Conteúdo</a>
+                        <a class="nav-link" href="{{ url_for('content.list_content') }}">Obras</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('posts.list_posts') }}">Posts</a>
