--- a/app/templates/comunidades_bloqueadas.html
+++ b/app/templates/comunidades_bloqueadas.html
@@ -26,7 +26,7 @@
         </div>
     </nav>
 
-    <div class="container mt-5">
+    <div class="container mt-5 mb-4">
         <div class="row">
             <div class="col-12">
                 <h1>Comunidades Bloqueadas</h1>
