--- a/app/templates/criar_comunidade.html
+++ b/app/templates/criar_comunidade.html
@@ -3,7 +3,7 @@
 {% block title %}Criar Comunidade - SeriDigital{% endblock %}
 
 {% block content %}
-<div class="container my-5">
+<div class="container my-5 mb-4">
     <div class="row justify-content-center">
         <div class="col-lg-8 col-xl-7">
             <div class="card">
