--- a/app/templates/posts/create.html
+++ b/app/templates/posts/create.html
@@ -3,12 +3,12 @@
 {% block title %}Criar Post - SeriDigital{% endblock %}
 
 {% block content %}
-<div class="container mt-4">
+<div class="container mt-4 mb-4">
     <div class="row">
         <div class="col-md-8 mx-auto">
             <div class="card">
                 <div class="card-header">
-                    <h3>Criar Novo Post</h3>
+                    <h3 style="color: white;">Criar Novo Post</h3>
                 </div>
                 <div class="card-body">
                     <form method="POST">
