--- a/app/templates/posts/edit.html
+++ b/app/templates/posts/edit.html
@@ -3,7 +3,7 @@
 {% block title %}Editar Post #{{ post.id }} - SeriDigital{% endblock %}
 
 {% block content %}
-<div class="container mt-4">
+<div class="container mt-4 mb-4">
     <div class="row">
         <div class="col-md-8 mx-auto">
             <div class="card">
