--- a/app/templates/posts/list.html
+++ b/app/templates/posts/list.html
@@ -3,7 +3,7 @@
 {% block title %}Posts - SeriDigital{% endblock %}
 
 {% block content %}
-<div class="container mt-4">
+<div class="container mt-4 mb-4">
     <div class="row">
         <div class="col-md-12">
             <div class="d-flex justify-content-between align-items-center mb-4">
@@ -12,14 +12,7 @@
                     <a href="{{ url_for('posts.create_post') }}" class="btn btn-primary">Criar Post</a>
                 {% endif %}
             </div>
-            
-            <div class="d-flex justify-content-between align-items-center mb-3">
-                <h5 class="mb-0">Todos os posts</h5>
-                {% if current_user.is_authenticated %}
-                    <a href="{{ url_for('posts.create_post') }}" class="btn btn-primary">Criar Post</a>
-                {% endif %}
-            </div>
-
+        
             {% if posts %}
                 <div class="list-group">
                     {% for p in posts %}
